Make logo notification menu fix currency sizing/spacing general ui work

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -115,16 +115,18 @@ ul.nav.nav-sidebar li > a, ul.nav.nav-sidebar li > a:hover, ul.nav.nav-sidebar l
 
 .noti_bubble {
     position:absolute;    /* This breaks the div from the normal HTML document. */
-    top: -6px;
-    right:-3px;
+    right: 10px;
+    top: 20px;
     padding:2px 2px 2px 2px;
-    background-color:red; /* you could use a background image if you'd like as well */
-    color:white;
+    background-color:transparent; /* you could use a background image if you'd like as well */
+    color:wheat;
     font-weight:bold;
     font-size:0.75em;
     line-height: 0.95em;
     font-family: Ubuntu;
-    text-align: center;
+    text-align: left;
+    margin-right: -10em;
+    width: 10em;
 }
 
 .noti_bubble_hidden {
@@ -171,11 +173,19 @@ body div.main ul.nav.nav-sidebar li > a:hover, body div ul.nav.nav-sidebar li > 
 	body .mobile {
 		display: none;
 	}
+
+	ul#notis.dropdown-menu.dropdown-notifications {
+		width: 40%;
+	}
 }
 
 @media (max-width: 767px) {
 	.navbar-nav .open .dropdown-menu>li>a {
 		color: wheat;
+	}
+
+	ul#notis.dropdown-menu.dropdown-notifications {
+		width: 90%;
 	}
 }
 
@@ -215,39 +225,52 @@ h4 {
 	-webkit-border-radius: 15px;
 	-moz-border-radius: 15px;
 	border-radius: 15px;
-	position: absolute;
     margin-left: auto;
     margin-right: auto;
     width: 20px;
     height: 20px;
-    top: 15px;
     left: 0;
     right: 0;
     bottom: 0;
 }
 
-.affix .navbar-header div.glow {
+.cropped div#noti_wrapper div.glow {
 	display: block;
+	position: absolute;
+	top: 15px;
 }
 	
-.affix-top .navbar-header div.glow {
+.cropped.open div#noti_wrapper div.glow {
 	display: none;
 }
-.navbar-header img {
-	height: 40px;
-	float: left;
-	cursor: pointer;
-}
-.cropped {
-    position: absolute;
-    margin-left: auto;
-    margin-right: auto;
-    top: 5px;
-    left: 0;
-    right: 0;
-    bottom: 0;
+
+.cropped.open div#noti_wrapper #noti_bubble {
+	display: none;
 }
 
+.navbar-header img {
+	height: 40px;
+	cursor: pointer;
+	position: relative;
+}
+.cropped {
+	position: absolute;
+	margin-left: auto;
+	margin-right: auto;
+	top: 0px;
+	left:0;
+	right:0;
+	width: 90%;
+	height: 50px;
+}
+.cropped div#noti_wrapper {
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+    width:60px;
+    text-align: center;
+    padding-top: 5px;
+}
 
 a {
 	color: #542b14;
@@ -362,4 +385,30 @@ tr.linked:hover > td {
 
 input.invalid-input {
 	border: 2px solid red;
+}
+
+.dropdown.nav-element img {
+	height: 1.6em;
+	width: 1.6em;
+	margin-right: 5px;
+}
+
+li.open >a.dropdown-toggle.nav-element, li.open >a.dropdown-togglenav-element:hover, li.open >a.dropdown-toggle.nav-element:focus {
+	background-color: #783919;
+}
+
+ul#notis.dropdown-menu.dropdown-notifications {
+	margin-top: 1px;
+	margin-left: auto;
+	margin-right: auto;
+	left: inherit;
+	right: inherit;
+}
+
+ul#notis.dropdown-menu.dropdown-notifications li {
+	overflow: hidden;
+}
+
+ul.dropdown-menu {
+	min-width: inherit;
 }
